<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPTV Coco</string>
    <string name="app_subtitle">Your playlist, your way</string>
    <string name="m3u_login">M3U Login</string>
    <string name="login_prompt">Enter your playlist credentials to get started</string>
    <string name="not_connected">Not connected</string>
    <string name="connected">Connected</string>
    <string name="connection_error">Connection failed</string>
    <string name="live_tv">Live TV</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="favorites">Favorites</string>
    <string name="search_categories">Search categories…</string>
    <string name="search_channels">Search channels…</string>
    <string name="search_movies">Search movies…</string>
    <string name="search_series">Search series…</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="play_pause">Play / Pause</string>
    <string name="channel_up">Channel Up</string>
    <string name="channel_down">Channel Down</string>
    <string name="favorite">Favorite</string>
    <string name="brightness_up">Brightness Up</string>
    <string name="brightness_down">Brightness Down</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="skip_forward">+30s</string>
    <string name="skip_backward">-30s</string>
    <string name="login">Login</string>
    <string name="m3u_url">M3U URL</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="runtime">Runtime</string>
    <string name="rating">Rating</string>
    <string name="cast">Cast</string>
    <string name="plot">Plot</string>
    <string name="start_watching">Start Watching</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="select_episode">Select Episode</string>
    <string name="season">Season</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="empty_state">Nothing to show</string>
    <string name="url_required">URL is required</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="login_type_m3u">M3U Playlist</string>
    <string name="login_type_xtream">Xtream Codes</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="connection_failed_message">Could not connect to the playlist.\n\nError: %1$s\n\nPlease check your details and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="user_menu">User Menu</string>
    <string name="refresh_playlist">Refresh Playlist</string>
    <string name="logout">Logout</string>
    <string name="close">Close</string>
    <string name="share_logs">Share Logs</string>
    <string name="not_available">N/A</string>
    <string name="username_label">Username: %1$s</string>
    <string name="last_refresh_label">Last Refresh: %1$s</string>
    <string name="status_label">Status: %1$s</string>
    <string name="refresh_failed">Refresh Failed</string>
    <string name="unknown_error">An unknown error occurred</string>
</resources>
